# pyaccess

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.githooks/: post-checkout
.github/workflows/: ci.yml
demos/: README.md
demos/demo/: README.md  pyproject.toml
demos/demo/consumer_pkg/: cross_package.py
demos/demo/core_pkg/: api.py  naming_mismatches.py  sibling.py
demos/demo/dynamic_pkg/: escape_hatches.py  hooks.py  introspection.py  module_marker.py  mutation.py  unresolved_attrs.py
demos/demo_all_clean/: README.md  pyproject.toml
demos/demo_all_clean/app/: entry.py
demos/demo_mixed/: README.md  pyproject.toml
demos/demo_mixed/engine/: core.py  extras.py
demos/demo_mixed/webapp/: handlers.py
demos/demo_pa001_internal/: README.md  pyproject.toml
demos/demo_pa001_internal/consumer_pkg/: use_internal.py
demos/demo_pa001_internal/core_pkg/: api.py  sibling.py
demos/demo_pa002_private/: README.md  pyproject.toml
demos/demo_pa002_private/mypkg/: other.py  secrets.py
scripts/: pyaccess-lsp-dispatch.py
src/pyaccess/: __init__.py  baseline.py  cli.py  config.py  diagnostics.py  discovery.py  docs.py  engine.py  graph.py  imports.py  lsp.py  markers.py  modules.py  reexports.py  suppression.py  symbols.py  usages.py
src/pyaccess/rules/: __init__.py  access.py  dynamic.py  naming.py  private.py
tests/: conftest.py  test_baseline.py  test_cli.py  test_cli_json.py  test_config.py  test_config_and_usages.py  test_discovery.py  test_docs.py  test_engine_access_rule.py  test_engine_dynamic.py  test_engine_incremental.py  test_graph.py  test_imports.py  test_lsp.py  test_markers.py  test_modules.py  test_reexports.py  test_rule_dynamic.py  test_rule_naming.py  test_rule_pa002_private.py  test_rules_direct.py  test_severity.py  test_suppression.py  test_suppression_engine_integration.py  test_symbols.py  test_usages.py
