[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaccess"
version = "0.0.1"
description = "Strict accessibility linter for Python (public/internal/private)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PyAccess contributors" }]
dependencies = [
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
lsp = ["pygls>=1.3", "lsprotocol>=2023.0.1"]

[project.scripts]
pyaccess = "pyaccess.cli:main"
pyaccess-lsp = "pyaccess.lsp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

# ---------------------------------------------------------------------------
# Ruff — keep the codebase compatible with the linter we are about to ship.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["demos"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM",# flake8-simplify
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.ruff.format]
quote-style = "double"


